src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;


.light {
  /* Your default theme */
  --background: white;
  --foreground: black;
  transition-duration: 0.5s;
}

.dark {
  --background: #444444;
  --foreground: white;
  transition-duration: 0.5s;
}



html {

  /* transition: all 0.5s ease-in-out; */
}

body {

  /* transition: all 0.5s ease-in-out; */


}

/* @font-face {
  font-family: 'OpenDyslexic';
  font-weight: 400;
  font-display: optional;
  src: local('OpenDyslexicFont'), url('/public/fonts/OpenDyslexic-Regular.otf') format('otf');
} */



.dark-dys {

  transition: all 0.5s ease-in-out;
  color: white;
  color-scheme: dark;
}

.dark-dys > * {
  transition: all 0.5s ease-in-out;
  font-family: '__opendyslexic_d8b60a', 'Arial' !important;
  background-color: #444444;
  color: white;
  color-scheme: dark;
}

.light-dys {

  transition: all 0.5s ease-in-out;
  background-color: white;
  color-scheme: light;
}

.light-dys > * {
  transition: all 0.5s ease-in-out;
  font-family: '__opendyslexic_d8b60a', 'Arial' !important;
  background-color: white;
  color-scheme: light;
}

/* @layer components {
  body * {
      @apply transition-colors duration-500;
  }
} */

/* :root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
  color: rgb(var(--foreground-rgb));
  background: linear-gradient(
      to bottom,
      transparent,
      rgb(var(--background-end-rgb))
    )
    rgb(var(--background-start-rgb));
} */

